--- a/src/component/services/card/Card.module.css
+++ b/src/component/services/card/Card.module.css
@@ -61,6 +61,14 @@
     justify-content: center;
     margin-top: 1rem;
 }
+ .Line2 {
+    font-size: 0.875rem; /* Responsive font size */
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1rem;
+}
 
 @media (max-width: 768px) {
     .word {
