--- a/src/component/services/core/Core.module.css
+++ b/src/component/services/core/Core.module.css
@@ -23,7 +23,7 @@
 }
 
 .Section div {
-  background-color: #f9f9f9;
+  background-color: #d5f3f4;
   border-radius: 10px;
   padding: 20px;
   opacity: 0; /* Initially hidden */
@@ -59,12 +59,18 @@
   0% {
     opacity: 0;
     transform: translateY(100%);
+    background-color: #ffffff;
+  }
+  50% {
+    background-color: #f0faff; /* Light blueish */
   }
   100% {
     opacity: 1;
     transform: translateY(0);
+    background-color: #f9f9f9; /* Final light gray */
   }
 }
+
 
 .Name1,
 .Name2,
